--- a/docs/draft/related.tex
+++ b/docs/draft/related.tex
@@ -1,4 +1,5 @@
 \section*{Related Work}
+\label{sec:related}
 Zwang et al.\cite{Zhang:2010:AOP:1878961.1878982} created a similar program in 2010 called PowerTutor that receives a power estimate to various hardware components and application and then assigns power usage to specific applications.  
 They created the benchmarks using a previous project call PowerBooter that monitored power consumption while controlling power management for individual components.  
 PowerTutor ultimately allows developers to determine the impact of their own application to improve their software designs.  
