--- a/docs/draft/main.tex
+++ b/docs/draft/main.tex
@@ -15,6 +15,7 @@
 \input{implementation}
 \input{evaluation}
 \input{related}
+\input{future}
 \input{conclusion}
 
 {\footnotesize \bibliographystyle{acm}
