added thoughts on carat in comments at end of related

--- a/docs/draft/related.tex
+++ b/docs/draft/related.tex
@@ -53,3 +53,17 @@ This makes application programmers factor currentcy in to their design whereas W
 Shi et al. develop a method of identifying users based on behavior profiling \cite{learningUserBehavior}. 
 Their methods of learning users' typical habits could be applied to power usage as well. 
 If we know that a person uses their GPS when traveling to work every morning then we can account for that required power consumption when modeling usage goals. 
+
+
+%%%%%%%%%%%%%%%%%%%%%%%%%
+%
+% thoughts on carat:
+% carat uses sparse information, device (assuming therefore user) specific.
+% iOS is a much narrower range of devices & OSes
+% can take up to a week to provide recommendations (as opposed to WH's hours)
+% good ideas to cull: 
+% 	confidence rating
+% 	measure of similar devices (more difficult to define 'similar' w/android)
+% 	
+% 
+%%%%%%%%%%%%%%%%%%%%%%%%%
