--- a/docs/draft/future.tex
+++ b/docs/draft/future.tex
@@ -1,16 +1,16 @@
-\section*{Future Work}
+\section{Future Work}
 \label{sec:future}
-\subsection*{Power Model}
-\emph{Watt's Happening} currently reports application's use of hardware resources without linking resource usage directly to power draw.
+\subsection{Power Model}
+\emph{Watt's Happening} currently reports applications' use of hardware resources without linking resource usage directly to power draw.
 A power model that correlates a specific resource's use to battery draw would allow applications to be directly linked to battery depletion.
 %This would enable 
 
-\subsection*{User Model}
+\subsection{User Model}
 Developing a model of usage for specific user/device pairings would allow finer-tuned use models.
-A user with a strong routine of device use, especially if battery depletion is high immediately after a charge followed by a long period of relatively slow depletion, will currently see very conservative estimates from \emph{Watt's Happening}. 
+A user with a strong routine of device use will currently see very conservative estimates from \emph{Watt's Happening}, especially if battery depletion is high immediately after a charge followed by a long period of relatively slow depletion. 
 A well-designed user model could account for usage habits and incorporate this information into the recommendation engine.
 
-\subsection*{Recommendation Engine}
+\subsection{Recommendation Engine}
 Currently, \emph{Watt's Happening} provides lists of applications weighted by specific resource consumption.
 A more robust recommendation engine could provide a single list of recommended actions, incorporating the user model, the power model, and past recommendations taken.
 Past recommendations accepted would indicate the user's flexibility and priorities for the device.
