--- a/docs/draft/implementation.tex
+++ b/docs/draft/implementation.tex
@@ -1,4 +1,4 @@
-\section*{Implementation}
+\section{Implementation}
 \label{sec:implementation}
 \emph{Watt's Happening} is implemented on Android OS version 4.0, API level $>$ 14. 
 The Android OS provides a variety of APIs allowing access to application and hardware information.
