--- a/docs/draft/references.bib
+++ b/docs/draft/references.bib
@@ -174,4 +174,17 @@
  keywords = {battery, mobile phones, power modeling},
 }
 
-
+@inproceedings{Oliner:2012:CED:2387858.2387864,
+ author = {Oliner, Adam J. and Iyer, Anand and Lagerspetz, Eemil and Tarkoma, Sasu and Stoica, Ion},
+ title = {Collaborative energy debugging for mobile devices},
+ booktitle = {Proceedings of the Eighth USENIX conference on Hot Topics in System Dependability},
+ series = {HotDep'12},
+ year = {2012},
+ location = {Hollywood, CA},
+ pages = {6--6},
+ numpages = {1},
+ url = {http://dl.acm.org/citation.cfm?id=2387858.2387864},
+ acmid = {2387864},
+ publisher = {USENIX Association},
+ address = {Berkeley, CA, USA},
+}
