--- a/docs/draft/design.tex
+++ b/docs/draft/design.tex
@@ -1,4 +1,4 @@
-\section*{Design}
+\section{Design}
 \label{sec:design}
 %\subsection*{Assumptions}
 %	short-running processes will have their battery usage amortized over longer running apps.
@@ -8,6 +8,28 @@
 % Assume that apps that use significant power will be spotted eventually, unless waking up on strictly opposite cycle.
 % Assume short-term information more informative than historic view -- analyzer assumes current behavior will continue
 % analyzer examines CPU and network I/O.  Due to time constraints, these metrics are currently separated.  Future work could provide a unified metric of usage.
+
+%%
+% why do we believe we will eventually see short-running apps?
+% because if they're drawing significant battery and we don't see them,
+% chances are high the app is 'hiding' itself from WH
+% since apps that 
+% 1) short term apps get bg'd not killed
+% 2) most apps are user-driven, so not strictly cyclical (so not opp WH cycle)
+% 3) in general, short-term apps won't use much power
+%     so for power depletion to be significant, must run very frequently
+% energy draw is amortized over all running apps
+
+%% 
+% why use shortterm only instead of weighted averages?
+% because weighted averages result in overestimation of remaining battery life.
+% Without a model of user behavior, we assume the user could proceed with 
+%current activity until the battery is depleted.
+
+%%
+% limited to currently running apps -- reduces /proc parsing overhead
+% 
+
 
 The \emph{Watt's Happening} application provides an estimate of remaining battery time, based on current and historic resource usage metrics. 
 This estimate is provided along with a list of the currently running applications, weighted based on resource usage metrics.  
