--- a/docs/draft/intro.tex
+++ b/docs/draft/intro.tex
@@ -1,5 +1,6 @@
-\section*{Introduction}
+\section{Introduction}
 \label{sec:intro}
+%to intro: logging is required all the time, but analysis/agg infrequently
 This paper describes the \emph{Watt's Happening} battery monitoring application. 
 With the rapid increase in the prevalence of mobile device technology into everyday usage, users want to be sure that their device will not die in the middle of the day.
 This can be tricky to balance since it's not always immediately apparent where the energy is getting spent in your device.
