--- a/docs/draft/motivation.tex
+++ b/docs/draft/motivation.tex
@@ -1,4 +1,4 @@
-\section*{Motivation}
+\section{Motivation}
 \label{sec:motivation}
 % lazy App programmers -- CPU, Network I/O
 Mobile devices, including smart phones and tablets, are nearly ubiquitous, and function as an integral part of modern life. 
