--- a/docs/draft/related.tex
+++ b/docs/draft/related.tex
@@ -1,10 +1,10 @@
-\section*{Related Work}
+\section{Related Work}
 \label{sec:related}
 Zwang et al.\cite{Zhang:2010:AOP:1878961.1878982} created a similar program in 2010 called PowerTutor that provides a power estimate to various hardware components and then assigns power usage to specific applications.  
 They created the benchmarks using a previous project call PowerBooter that monitored power consumption while controlling power management for individual components. 
 Since their models are based off of specific hardware components, their application is intrinsically tied to specific devices.
-They warn that if PowerTutor is used with devices other than their target devices, "power consumption estimates will be rough."
-\emph{Watt's Happening} was intended to be a more general application that can provide useful information to a user regardless of their device's hardware. 
+They warn that if PowerTutor is used with devices other than their target devices, ``power consumption estimates will be rough."
+\emph{Watt's Happening} is intended to be a more general application that can provide useful information to a user regardless of their device's hardware. 
 PowerTutor ultimately allows developers to determine the impact of their own application to improve their software designs.  
 Future work could seek to incorporate aspects of PowerTutor into Watt's Happening to fine-tune application usage details and improve recommendations.
 
@@ -20,13 +20,13 @@ This is useful for catching programming bugs, such as holding onto a wakelock to
 It also illuminates the fact that large amounts of energy are used in I/O operations. 
 This implies that in order to save energy it is important to only use 3G, GPS, and WiFi when it is truly necessary.
 These observations led us to the conclusion that it is important for \emph{Watt's Happening} to record and correlate network usage to specific applications.
-Also, being that network operations were shown to be enery intensive, a recommendation system should place an emphasis on applications that abuse the devices networking.
+Also, since network operations were shown to be energy intensive, a recommendation system should place an emphasis on applications that abuse the device's networking.
 %Therefore, it is clear that disabling these aspects of a mobile device can make profound differences in battery life.
 
 There has also been significant work that offers insights into user profiling and modeling.
-Eventually, \emph{Watt's Happening} looks leverage user profiling to automatically control the power of different radios on the device. 
+Eventually, \emph{Watt's Happening} aspires to leverage user profiling to automatically control the power of different radios on the device. 
 This would allow the application to prolong the battery life of a mobile device just by observing a user's usage patterns.
-Intelligent models are necessary in order to keep from being too intrusive in user actions.
+Intelligent models are necessary in order to keep the application from being too intrusive in user actions.
 If the application's actions cause annoyance to the user, then they will refuse to use the application. 
 
 Balajinath and Raghavan discuss learning user behavior to build a model of non-malicious user actions, with the intent to easily identify malicious users\cite{Balajinath:2001:IDT:2294491.2294970}. 
@@ -47,12 +47,12 @@ Users don't need to necessarily identify successful results, but measurements of
 These properties should be observable without user interaction to assess likelihood of success. 
 
 % I have no idea how to connect this to what we did
-Ashbrook learns significant locations and predicts user movement from GPS data \cite{Ashbrook:2002:LSL:862896.881068}. 
-Raw location data is analyzed using k-clustering with a variety of radiuses. 
-A building location is inferred from lack of GPS information for an arbitrarily selected ten minute time slice. 
-This is vulnerable to other GPS data issues, including urban canyons or device failure. 
-The location prediction is based on a Markov model built off of observed patterns. 
-First order Markov models are used, as data models beyond that would require a much longer observation period. 
+%Ashbrook learns significant locations and predicts user movement from GPS data \cite{Ashbrook:2002:LSL:862896.881068}. 
+%Raw location data is analyzed using k-clustering with a variety of radiuses. 
+%A building location is inferred from lack of GPS information for an arbitrarily selected ten minute time slice. 
+%This is vulnerable to other GPS data issues, including urban canyons or device failure. 
+%The location prediction is based on a Markov model built off of observed patterns. 
+%First order Markov models are used, as data models beyond that would require a much longer observation period. 
 
 Rumble et al. discussed a new operating system called Cinder that sought to extend limited energy resources by implementing capacitor objects \cite{Rumble:2009:AJT:1592606.1592618}. 
 The similarities to their work included a desire to reach a goal usage time by dynamically running statistics of application energy consumption. 
@@ -68,12 +68,16 @@ Shi et al. develop a method of identifying users based on behavior profiling \ci
 Their methods of learning users' typical habits could be applied to power usage as well. 
 If we know that a person uses their GPS when traveling to work every morning then we can account for that required power consumption when modeling usage goals. 
 
+Oliner et al. develop Carat, a system to identify misbehaving code and energy-inefficient applications \cite{Oliner:2012:CED:2387858.2387864}.
+Carat is differentiated from \emph{Watt's Happening} by using a community model.
+Carat's sparse information gathering is also different than \emph{Watt's Happening}'s continuous logging cycle.
+Due to this sparseness, Carat estimations of application usage may not be available to the user for up to a week after initial installation.
+\emph{Watt's Happening} can provide preliminary observations after the first analysis has been performed, as quickly as 15 minutes after initial installation.
 
 %%%%%%%%%%%%%%%%%%%%%%%%%
 %
 % thoughts on carat:
 % carat uses sparse information, device (assuming therefore user) specific.
-% iOS is a much narrower range of devices & OSes
 % can take up to a week to provide recommendations (as opposed to WH's hours)
 % good ideas to cull: 
 % 	confidence rating
