--- a/docs/draft/evaluation.tex
+++ b/docs/draft/evaluation.tex
@@ -1,2 +1,65 @@
 \section{Evaluation}
 \label{sec:evaluation}
+
+\subsection{Logging Window}
+\emph{Watt's Happening} selected a five minute logging window.
+This window was chosen to balance impact on the system with a desire to capture as much data as possible, as mentioned in Section \ref{subsec:impl_logging}.
+Our timing window also impacts our time remaining calculation, described in Section %TODO citation 
+As we've seen in our test cases, because battery level does not change for long periods of time while the phone idles, shorter logging windows would not provide more utility for our estimations. %TODO table ref
+Using less than a five minute window, the number of short term observations with no battery change registered will grow, which results in more logging with no gain in useful data.
+If more fine-grained battery information is required, we could register a \texttt{BatteryLevelChange} event handler to capture exactly when a battery level change occurs.
+If we extend the logging window, there is a higher chance of missing applications that impact battery depletion.
+
+\subsection{Estimation Model}
+Initially, we experimented with using long term historical usage metrics in estimating application resource consumption.
+This led to overestimation, since usage spikes are overly smoothed into long periods of near-zero resource consumption.
+%This led to overestimation, since current usage is overly smoothed.
+Next, we attempted to incorporate both long and short term usage metrics in estimating application resource consumption by doing a weighted average.
+While our estimates improved, this still resulted in overestimation. 
+Both overestimations were due to long periods with a lower rate of battery use outweighing short periods with a higher rate of battery use, that could continue until the end of the battery.
+%This led to overestimation, since long periods with a lower rate of battery use outweighed the short periods with a higher rate of battery use that could continue until the end of the battery.
+Due to our goal of not overestimating remaining battery levels, our estimation is derived primarily from short term use when available and falling back on historic usage information, as described in Section \ref{subsec:impl_analysis}.
+
+\subsection{Experimentation}
+% Methodology
+Although formal and repeatable testing would have provided a consistent and controlled environment to display incontrovertible usage trends, a sterile environment is not the expected use case.
+Therefore, averaging real world usage scenarios provide a more realistic, yet hopefully still convincing, data set.
+\emph{Watt's Happening} was tested and analyzed via iterative real world testing on a selection of Android devices for over 40 hours of total testing time.
+The devices include an HTC EVO 3D and a Motorola Droid RAZR both running Android 4.0. 
+
+\begin{figure}[ht!]
+	\begin{center}
+		\includegraphics[width=\columnwidth]{figs/battery_level.png}
+		\caption{}
+		\label{fig:bat_level}
+\end{center}
+\end{figure}
+\begin{figure}[ht!]
+	\begin{center}
+		\includegraphics[width=\columnwidth]{figs/est_time_remaining.png}
+		\caption{}
+		\label{fig:est_remaining}
+\end{center}
+\end{figure}
+\begin{figure}[ht!]
+	\begin{center}
+		\includegraphics[width=\columnwidth]{figs/bat_vs_time_short.png}
+		\caption{}
+		\label{fig:bat_vs_time_short}
+\end{center}
+\end{figure}
+
+graphs of data
+describes use \& interesting points
+%
+are our metrics accurate?
+%
+performance
+% we did so many experiments
+
+\subsection{Performance}
+% do we see underestimation?
+% here's where nick's sweet graphs go
+% app performance
+% issues with long idle times messing up long term usage values
+% % how to fix
