--- a/docs/draft/design.tex
+++ b/docs/draft/design.tex
@@ -22,6 +22,7 @@
 
 %% 
 % why use shortterm only instead of weighted averages?
+% short-term info is more indicative (\ref{fig:bat_v_time} )
 % because weighted averages result in overestimation of remaining battery life.
 % Without a model of user behavior, we assume the user could proceed with 
 %current activity until the battery is depleted.
@@ -49,10 +50,12 @@ Performing this balance does allow the possibility that short-running applicatio
 We assume that short-running applications that account for significant battery draw will eventually appear to our logger.
 Applications that are not visible to our logger certainly still draw battery, but this usage, by necessity, will be amortized over applications that are visible.
 
-\emph{Watt's Happening} provides an activity-weighted battery life estimate.
+\emph{Watt's Happening} provides a battery life estimate based on rate of usage in conjunction with battery level remaining.
 This estimate is strongly biased in favor of recent activity, while still incorporating long-term historic usage. 
-Since battery consumption rate is derived from the assumption that the current usage pattern will continue, recent activities will yield a more conservative estimation of future use.
+Since the battery consumption rate is derived from the assumption that the current usage pattern will continue, recent activities will yield a more conservative estimation of future use.
+%We use this assumption to find 
 The reported time remaining should be conservative because user expectation dictates that the battery will last at least as long as the \emph{Watt's Happening} estimate.
+
 %In the case of no change in the battery level during a short term snapshot, a longterm averaged estimate is used.
 
 If the user desires to prolong their battery further than the estimate, \emph{Watt's Happening} presents a set of lists showing running applications sorted by respective resource usage.
