Added a couple sentences to differentiate us from powertutor, doesn't explicitly say power tutor though, save that for related works

--- a/docs/draft/motivation.tex
+++ b/docs/draft/motivation.tex
@@ -9,7 +9,8 @@ Unfortunately, many application developers do not take into account these power 
 A user may experience erratic power surges based on different applications and might not know if his or her device will last until the next opportunity to recharge. 
 
 While power analyzing applications exist, many are intended to aid application developers rather than end users \cite{Pathak:2012:ESI:2168836.2168841} \cite{energy-aware}. 
-Of the power saving applications available for users, some complain of the applications being too intrusive. 
-These applications disable important features of the phone without user knowledge and make practical usage of the device very difficult. 
+Of the power saving applications available for users, some complain of the applications being too intrusive or that they target specific mobile devices. 
+These applications disable important features of the phone without user knowledge and make practical usage of the device very difficult.
+Also, \emph{Watt's Happening} looks to provide useful information to users regardless oftheir underlying device hardware.
 Compounding this problem, common users remain blissfully unaware of their power use until their phone reaches a minimum battery threshold.
 This need for an application to inform the user of high usage applications is what motivated the work behind \emph{Watt's Happening}.
