--- a/docs/draft/main.tex
+++ b/docs/draft/main.tex
@@ -3,6 +3,7 @@
 \usepackage[dvips]{graphicx}
 \usepackage{verbatim}
 \usepackage[margin=1in, paperwidth=8.5in, paperheight=11in]{geometry}
+\usepackage{url}
 
 \title{Watt's Happening}
 \author{Ben Bramble, Nick Burek, Alexis Fisher, and Adam Vail}
