--- a/docs/draft/references.bib
+++ b/docs/draft/references.bib
@@ -188,3 +188,10 @@
  publisher = {USENIX Association},
  address = {Berkeley, CA, USA},
 }
+@MISC{glwg,
+author = {Rubicon},
+title = {Great Little War Game},
+month = {December},
+year = {2012},
+howpublished = {\url{http://www.rubicondev.com/glwg/}},
+}
