--- a/docs/draft/main.tex
+++ b/docs/draft/main.tex
@@ -10,6 +10,8 @@
 \begin{document}
 \maketitle
 
+%TODO abstract
+% abstract should include something about "created Watt's Happening"
 \input{intro}
 \input{motivation}
 \input{design}
