--- a/docs/draft/motivation.tex
+++ b/docs/draft/motivation.tex
@@ -16,4 +16,4 @@ These applications disable important features of the phone without user knowledg
 % the below 'looks to' is awkward. aspires?  or just 'provides'
 %Also, \emph{Watt's Happening} looks to provide useful information to users regardless of their underlying device hardware.
 Compounding this problem, common users remain blissfully unaware of their power use until their phone reaches a minimum battery threshold.
-This need for an application to inform the user of high usage applications is what motivated the work behind developing and implementing \emph{Watt's Happening}.
+This need for an application to inform the user of high usage applications motivated the development of \emph{Watt's Happening}.
